Improved scripts, server and frontend

--- a/frontend/views/teacher.ejs
+++ b/frontend/views/teacher.ejs
@@ -193,83 +193,8 @@
 <main>
   <h1 class="visually-hidden">Bashboard</h1>
 
-  
   <div class="container px-4 py-4">
     <h2 class="pb-2 border-bottom">Dashboard</h2>
-    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#db-down"/></svg>
-        </div>
-        <div>
-          <h3 class="fs-2 text-body-emphasis">Database Backup</h3>
-          <a href="/dbbackup" class="btn btn-primary">Create Backup</a>
-        </div>
-      </div>
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#db-up"/></svg>
-        </div>
-        <div>
-          <h3 class="fs-2 text-body-emphasis">Database Restore</h3>
-          <a href="#" class="btn btn-primary">Upload SQL file</a>
-
-          <!-- <form id="sqlupload" action="/dbrestore" method="POST" style="display: none;">
-            
-          </form> -->
-
-          <!-- <script> //js to send signout post request
-            function sqlrestore() {
-              const form = document.getElementById('sqlupload');
-              form.submit();
-            }
-          </script> -->
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="border-bottom mx-4"></div>
-  </div>
-
-  <div class="container px-4 py-4">
-    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#add"/></svg>
-        </div>
-        <div>
-          <h3 class="fs-2 text-body-emphasis">Add School</h3>
-          <a href="#" class="btn btn-primary">Start</a>
-        </div>
-      </div>
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#modify"/></svg>
-        </div>
-        <div>
-          <h3 class="fs-2 text-body-emphasis">Modify School</h3>
-          <a href="#" class="btn btn-primary">Start</a>
-        </div>
-      </div>
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#face"/></svg>
-        </div>
-        <div>
-          <h3 class="fs-2 text-body-emphasis">Library Operators</h3>
-          <a href="#" class="btn btn-primary">Requests</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="border-bottom mx-4"></div>
-  </div>
-
-  <div class="container px-4 py-4">
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-center">
         <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -300,6 +225,7 @@
   </div>
 </main>
 
+<!-- Modals -->
 <div class="modal fade" id="pswd-change" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -381,6 +307,12 @@
                   <div>
                     <h5 class="mb-0">Age</h5>
                     <%=user.age%>
+                  </div>
+                </li>
+                <li class="d-flex gap-4">
+                  <div>
+                    <h5 class="mb-0">School</h5>
+                    <%=school%>
                   </div>
                 </li>
                 <li class="d-flex gap-4">
