--- a/frontend/views/admin.ejs
+++ b/frontend/views/admin.ejs
@@ -94,7 +94,7 @@
       }
     </style>
 
-    
+
     <!-- Custom styles for this template -->
     <link href="css/dashboards.css" rel="stylesheet">
   </head>
@@ -152,6 +152,54 @@
       </ul>
     </div>
 
+    <!-- header -->
+<div class="container">
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <div class="col-md-3 mb-2 mb-md-0" style="width:auto">
+      <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none pt-1">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16" role="img" aria-label="Website logo">
+          <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+        </svg>
+      </a>
+    </div>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="/" class="nav-link px-2">Home</a></li>
+      <li><a href="/books" class="nav-link px-2 link-secondary">Books</a></li>
+    </ul>
+
+    <%if (user) {%>
+      <div class="dropdown">
+        <a href="#" class="d-flex align-items-center fw-light text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+          <!-- <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2"> -->
+          <strong><%=user.username%></strong>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+          <li><a class="dropdown-item" href="/dashboard">Dashboard</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#" onclick="signout()">Sign out</a></li>
+          <form id="signout" action="/signout" method="POST" style="display: none;"></form>
+          <script> //js to send signout post request
+            function signout() {
+              const form = document.getElementById('signout');
+              form.submit();
+            }
+          </script>
+        </ul>
+      </div>
+    <%} else {%>
+      <div class="col-md-3 text-end" style="width:auto">
+        <a class="btn btn-outline-primary me-2" href="/signup" class="nav-link px-2 ">Sign-up</a>
+        <a class="btn btn-primary me-2" href="/signin" class="nav-link px-2 ">Login</a>
+      </div>
+    <% } %>
+  </header>
+</div>
+
+
+
+
+
 <!-- My icons -->
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
   <symbol id="db-down" viewBox="0 0 16 16">
@@ -186,16 +234,56 @@
     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
   </symbol>
-  
+  <symbol id="db-fill" viewBox="0 0 16 16">
+    <path d="M3.904 1.777C4.978 1.289 6.427 1 8 1s3.022.289 4.096.777C13.125 2.245 14 2.993 14 4s-.875 1.755-1.904 2.223C11.022 6.711 9.573 7 8 7s-3.022-.289-4.096-.777C2.875 5.755 2 5.007 2 4s.875-1.755 1.904-2.223Z"/>
+    <path d="M2 6.161V7c0 1.007.875 1.755 1.904 2.223C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777C13.125 8.755 14 8.007 14 7v-.839c-.457.432-1.004.751-1.49.972C11.278 7.693 9.682 8 8 8s-3.278-.307-4.51-.867c-.486-.22-1.033-.54-1.49-.972Z"/>
+    <path d="M2 9.161V10c0 1.007.875 1.755 1.904 2.223C4.978 12.711 6.427 13 8 13s3.022-.289 4.096-.777C13.125 11.755 14 11.007 14 10v-.839c-.457.432-1.004.751-1.49.972-1.232.56-2.828.867-4.51.867s-3.278-.307-4.51-.867c-.486-.22-1.033-.54-1.49-.972Z"/>
+    <path d="M2 12.161V13c0 1.007.875 1.755 1.904 2.223C4.978 15.711 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13v-.839c-.457.432-1.004.751-1.49.972-1.232.56-2.828.867-4.51.867s-3.278-.307-4.51-.867c-.486-.22-1.033-.54-1.49-.972Z"/>
+  </symbol>
 </svg>
 
 
 <main>
   <h1 class="visually-hidden">Bashboard</h1>
 
-  
+  <!-- Username, Password and Profile -->
   <div class="container px-4 py-4">
     <h2 class="pb-2 border-bottom">Dashboard</h2>
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="col d-flex align-items-center">
+        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#user"/></svg>
+        </div>
+        <div>
+          <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#user-change">Change username</a>
+        </div>
+      </div>
+      <div class="col d-flex align-items-center">
+        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#key"/></svg>
+        </div>
+        <div>
+          <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pswd-change">Change password</a>
+        </div>
+      </div>
+      <div class="col d-flex align-items-center">
+        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#profile"/></svg>
+        </div>
+        <div>
+          <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profile-modal">My profile</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="border-bottom mx-4"></div>
+  </div>
+
+  <!-- DB Restore and Backup-->
+  <div class="container px-4 py-4">
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-start">
         <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -215,7 +303,7 @@
           <a href="#" class="btn btn-primary">Upload SQL file</a>
 
           <!-- <form id="sqlupload" action="/dbrestore" method="POST" style="display: none;">
-            
+
           </form> -->
 
           <!-- <script> //js to send signout post request
@@ -233,6 +321,7 @@
     <div class="border-bottom mx-4"></div>
   </div>
 
+  <!-- Add School, Modify School and view library operators -->
   <div class="container px-4 py-4">
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-start">
@@ -265,18 +354,21 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="border-bottom mx-4"></div>
-  </div>
+
+
+
+  <!-- Queries -->
+  <div class="b-example-divider"></div>
 
   <div class="container px-4 py-4">
+    <h2 class="pb-2 border-bottom">Administration</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-center">
         <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#user"/></svg>
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#db-fill"/></svg>
         </div>
         <div>
-          <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#user-change">Change username</a>
+          <a href="/admin-loans" class="btn btn-primary">View loans per school</a>
         </div>
       </div>
       <div class="col d-flex align-items-center">
@@ -298,6 +390,8 @@
 
     </div>
   </div>
+
+
 </main>
 
 <div class="modal fade" id="pswd-change" tabindex="-1" aria-hidden="true">
@@ -389,15 +483,25 @@
                       <%=user.type%>
                     </div>
                   </li>
-            </ul> 
+            </ul>
         </div>
         <div class="modal-footer">
-          
+
         </div>
       </div>
     </div>
   </div>
 
+
+  <footer class="footer mt-auto py-3 bg-body-tertiary text-body-secondary">
+    <div class="container">
+      <p class="float-end mb-1">
+        <a href="#">Back to top</a>
+      </p>
+      <p class="mb-1">Copyleft &#127279;</p>
+      <p class="mb-2">Feel free to clone the GitHub repository and modify the project!</p>
+    </div>
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
