More queries implemented

--- a/frontend/views/admin-queries.ejs
+++ b/frontend/views/admin-queries.ejs
@@ -167,8 +167,8 @@
         <ul class="list-group mb-4">
             <% for(var i=0; i<total_items; i++) { %>
             <li class="list-group-item d-flex justify-content-between">
-                <label><%= items[i].School_Name %></label>
-                <label><%= items[i].Total_Loans %></label>
+                <label><%= left_items[i] %></label>
+                <label><%= right_items[i] %></label>
             </li>
             <% } %>
           </ul>
