--- a/frontend/views/admin.ejs
+++ b/frontend/views/admin.ejs
@@ -364,9 +364,6 @@
     <h2 class="pb-2 border-bottom">Administration</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-center">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#db-fill"/></svg>
-        </div>
         <div>
           <h3 class="fs-2 text-body-emphasis">View loans per school</h3>
           <form action="/admin-loans" method="POST">
@@ -380,23 +377,138 @@
           </form>
         </div>
       </div>
+
       <div class="col d-flex align-items-center">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#key"/></svg>
-        </div>
         <div>
-          <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pswd-change">Change password</a>
-        </div>
-      </div>
-      <div class="col d-flex align-items-center">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#profile"/></svg>
-        </div>
-        <div>
-          <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profile-modal">My profile</a>
+          <h3 class="fs-2 text-body-emphasis">View authors per category</h3>
+          <form action="/admin-author-categories" method="POST">
+            <div class="input-group input-group-sm mb-3">
+              <span class="input-group-text">Category</span>
+              <select name="category">
+                <option>Action and Adventure</option>
+                <option>Art</option>
+                <option>Biography</option>
+                <option>Business and Economics</option>
+                <option>Comics and Graphic Novels</option>
+                <option>Computing and Technology</option>
+                <option>Cookbooks and Food</option>
+                <option>Crafts and Hobbies</option>
+                <option>Crime and Mystery</option>
+                <option>Drama</option>
+                <option>Education and Teaching</option>
+                <option>Fantasy</option>
+                <option>Fiction</option>
+                <option>Health and Wellness</option>
+                <option>Historical Fiction</option>
+                <option>History</option>
+                <option>Horror</option>
+                <option>Humor</option>
+                <option>Inspirational and Motivational</option>
+                <option>LGBTQ+</option>
+                <option>Literary Fiction</option>
+                <option>Music</option>
+                <option>Parenting and Family</option>
+                <option>Philosophy</option>
+                <option>Poetry</option>
+                <option>Politics and Social Sciences</option>
+                <option>Religion and Spirituality</option>
+                <option>Romance</option>
+                <option>Science</option>
+                <option>Science Fiction</option>
+                <option>Self-Help and Personal Development</option>
+                <option>Sports</option>
+                <option>Thriller</option>
+                <option>Travel</option>
+                <option>True Crime</option>
+                <option>Western</option>
+              </select>
+            </div>
+            <div class="d-flex justify-content-center">
+              <input class="btn btn-primary" type="submit" value="Go!">
+            </div>
+          </form>
         </div>
       </div>
 
+      <div class="col d-flex align-items-center">
+        <div>
+          <h3 class="fs-2 text-body-emphasis">View teachers who have rented books per category</h3>
+          <form action="/admin-teacher-categories" method="POST">
+            <div class="input-group input-group-sm mb-3">
+              <span class="input-group-text">Category</span>
+              <select name="category">
+                <option>Action and Adventure</option>
+                <option>Art</option>
+                <option>Biography</option>
+                <option>Business and Economics</option>
+                <option>Comics and Graphic Novels</option>
+                <option>Computing and Technology</option>
+                <option>Cookbooks and Food</option>
+                <option>Crafts and Hobbies</option>
+                <option>Crime and Mystery</option>
+                <option>Drama</option>
+                <option>Education and Teaching</option>
+                <option>Fantasy</option>
+                <option>Fiction</option>
+                <option>Health and Wellness</option>
+                <option>Historical Fiction</option>
+                <option>History</option>
+                <option>Horror</option>
+                <option>Humor</option>
+                <option>Inspirational and Motivational</option>
+                <option>LGBTQ+</option>
+                <option>Literary Fiction</option>
+                <option>Music</option>
+                <option>Parenting and Family</option>
+                <option>Philosophy</option>
+                <option>Poetry</option>
+                <option>Politics and Social Sciences</option>
+                <option>Religion and Spirituality</option>
+                <option>Romance</option>
+                <option>Science</option>
+                <option>Science Fiction</option>
+                <option>Self-Help and Personal Development</option>
+                <option>Sports</option>
+                <option>Thriller</option>
+                <option>Travel</option>
+                <option>True Crime</option>
+                <option>Western</option>
+              </select>
+            </div>
+            <div class="d-flex justify-content-center">
+              <input class="btn btn-primary" type="submit" value="Go!">
+            </div>
+          </form>
+        </div>
+      </div><!-- first row ends here -->
+    </div>
+
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="col d-flex align-items-center">
+        <div>
+          <h3 class="fs-2 text-body-emphasis">View young teachers with most loans</h3>
+          <form action="/admin-loans" method="POST">
+            <div class="input-group input-group-sm mb-3">
+              <span class="input-group-text">Month - Year</span>
+              <input type="month" class="form-control" name="my">
+            </div>
+            <div class="d-flex justify-content-center">
+              <input class="btn btn-primary" type="submit" value="Go!">
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class="col d-flex align-items-center">
+        <div>
+          <h3 class="fs-2 text-body-emphasis">View authors whose books have never been rented</h3>
+          <form action="/admin-loans" method="POST">
+            <div class="d-flex justify-content-center">
+              <input class="btn btn-primary" type="submit" value="Go!">
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 
