--- a/frontend/views/teacher.ejs
+++ b/frontend/views/teacher.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="auto">
+<html lang="en" class="h-100" data-bs-theme="auto">
   <head>
     <script src="js/color-modes.js"></script>
 
@@ -99,7 +99,7 @@
     <link href="css/dashboards.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="h-100 d-flex flex-column">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <symbol id="check2" viewBox="0 0 16 16">
         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
@@ -186,12 +186,14 @@
     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
   </symbol>
-  
 </svg>
+
+    <!-- header -->
+    <%- include('header', {user: user}) -%>
 
 
 <main>
-  <h1 class="visually-hidden">Bashboard</h1>
+  <h1 class="visually-hidden">Dashboard</h1>
 
   <div class="container px-4 py-4">
     <h2 class="pb-2 border-bottom">Dashboard</h2>
@@ -330,6 +332,8 @@
     </div>
   </div>
 
+  <!-- Footer -->
+  <%- include('footer') -%>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
